--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@ body {
 }
 
 /* Logo */
+header
+{
+  background-color: #E7E9FC;
+}
+
 .logo-header, .footer-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
