--- a/css/styles.css
+++ b/css/styles.css
@@ -150,7 +150,6 @@ header
 }
 .portfolio-section {
   padding: 60px 20px;
-  background-color: #ffffff;
   text-align: center;
 }
 
@@ -167,15 +166,11 @@ header
   list-style: none;
   padding: 0;
   margin: 0;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
 }
 
 .portfolio-item {
-  background-color: #ffffff;
-  border: 1px solid #e7e9fc;
-  text-align: left;
+  background-color: #FFFFFF;
+  margin-bottom: 30px;
 }
 
 .portfolio-item-title {
@@ -184,15 +179,16 @@ header
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  margin: 16px;
+  margin: 10px 0 5px;
 }
 
 .portfolio-item-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  margin: 0 16px 16px;
+  margin: 0;
 }
+
 
 /* Footer */
 .footer-section {
