--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 
 body {
   font-family: "Roboto", sans-serif;
@@ -10,8 +10,7 @@ body {
 }
 
 /* Logo */
-header
-{
+header {
   background-color: #E7E9FC;
 }
 
@@ -26,15 +25,13 @@ header
 }
 
 .logo-header span, .footer-logo span {
-  color:  #2e2f42;
+  color: #2e2f42;
 }
 
 /* Navigation */
 .main-nav {
-  display: flex;
   list-style: none;
-  gap: 30px;
-  padding: 0;
+  margin: 0;
 }
 
 .nav-link {
@@ -70,7 +67,6 @@ header
 .hero-section {
   background-color: #2e2f42;
   text-align: center;
-  padding: 60px 20px;
 }
 
 .hero-title {
@@ -90,9 +86,7 @@ header
   letter-spacing: 0.04em;
   color: #ffffff;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  padding: 12px 25px;
   margin-top: 20px;
 }
 
@@ -104,7 +98,6 @@ header
 /* Services section */
 .services-section {
   background-color: #FFFFFF;
-  padding: 60px 20px;
 }
 
 .service-title {
@@ -124,7 +117,6 @@ header
 /* Team section */
 .team-section {
   background-color: #F4F4FD;
-  padding: 60px 20px;
   text-align: center;
 }
 
@@ -150,8 +142,9 @@ header
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+/* Portfolio */
 .portfolio-section {
-  padding: 60px 20px;
   text-align: center;
 }
 
@@ -166,7 +159,6 @@ header
 
 .portfolio-list {
   list-style: none;
-  padding: 0;
   margin: 0;
 }
 
@@ -191,16 +183,14 @@ header
   margin: 0;
 }
 
-
 /* Footer */
 .footer-section {
   background-color: #2e2f42;
-  padding: 40px 20px;
   text-align: center;
 }
 
 .footer-text {
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #F4F4FD;
+  color: #f4f4fd 
 }
