--- a/css/styles.css
+++ b/css/styles.css
@@ -189,8 +189,9 @@ header {
   text-align: center;
 }
 
-.footer-text {
+span.footer-text {
+  color: #F4F4FD;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd 
+  
 }
